Fixed Spacing

--- a/website/src/app/animal-info/animal-info.component.scss
+++ b/website/src/app/animal-info/animal-info.component.scss
@@ -6,9 +6,7 @@ label{
 
 .min{
   height: 300px;
-  overflow: hidden;
-  word-break: break-word;
-}
+  overflow: hidden;}
 
 .card{
   border-width: 2px;
