--- a/website/src/app/dashboard/all/all.component.scss
+++ b/website/src/app/dashboard/all/all.component.scss
@@ -7,7 +7,7 @@
 }
 
 .addIcon{
-  width:40%;
+  width:20%;
 }
 
 img{
